--- a/estadios.html
+++ b/estadios.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <a href="index.html"><title>
-      Copa do Mundo 2022 | Qatar
-    </a></title>
+    <title>Copa do Mundo 2022 | Qatar</title>
     <link href="img/copaicon.ico" rel="icon">
     <link rel="stylesheet" href="css/copa.css"> 
     <nav>
@@ -14,8 +12,8 @@
       <h1 style="color:rgb(240, 235, 214)">Descubra a Copa</h1>
         <ul>
           
-          <li><a href="index.html" style="color:rgb(240, 235, 214)">Conheça as Seleções participantes</a></li>
-          <li><a href="index.html" style="color:rgb(240, 235, 214)">Grupos da Competição</a></li>
+          <li><a href="index.html" style="color:rgb(240, 235, 214)">Seleções participantes</a></li>
+          <li><a href="grupos.html" style="color:rgb(240, 235, 214)">Grupos da Competição</a></li>
           <li><a href="estadios.html" style="color:rgb(240, 235, 214)">Estádios da Competição</a></li>
           
             </ul>
@@ -46,11 +44,11 @@
     </style>
 </head>
 <body>
-    <header><div class="myDiv">
+    <header><div class="myDiv"><a href="index.html">
         <h1 id="myDiv">Copa do Mundo Fifa 2022 - Qatar
           <br>
           <img src="img/logo-copa-cabec-2.png" alt="Copa do Mundo Fifa 2022 - Qatar" height="300px" width="300px">
-        </h1>
+        </h1></a>
       </div>
 
     </header>
