--- a/grupos.html
+++ b/grupos.html
@@ -20,7 +20,36 @@
           
             </ul>
       </nav>
-    <style> 
+    <style>
+    #info {
+  position: relative;
+  background-color: rgb(240, 235, 237);
+  height: 100%;
+  padding: 20px;
+  padding-bottom: 80px;
+  width: 70%;
+    margin-top: 525px;
+    margin-left: 300px;
+    margin-bottom: 100px;
+    
+  }
+
+  #tudo {
+    border-color:  rgb(240, 235, 237);
+    border-collapse: collapse;
+  }
+
+#grupos, th, td {
+  width: 400px;
+  border: 2px solid rgb(49, 1, 17);
+  border-collapse: collapse;
+  text-align: center;
+  padding: 8px;
+}
+
+#primeira {
+    background-color: rgb(255, 255, 255);
+} 
     </style>
 </head>
 <body>
@@ -34,4 +63,219 @@
   </header>
 
   <section></section>
+
+  <div id="info"><h1>Grupos</h1>
+    <table id="tudo"><tr><td>
+    <table id="grupos">
+    <tr id="primeira">
+      <th colspan="3">Grupo A</th>
+    </tr>
+    <tr>
+      <td>1</td> 
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/QAT?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Qatar</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/ECU?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Equador</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/SEN?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Senegal</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/NED?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Holanda</td>
+    </tr>
+  </table></td>
+  
+  <td><table id="grupos">
+    <tr id="primeira">
+      <th colspan="3">Grupo B</th>
+    </tr>
+    <tr>
+      <td>1</td> 
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/ENG?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Inglaterra</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/IRN?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Irã</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/USA?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Estados Unidos</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/WAL?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>País de Gales</td>
+    </tr>
+  </table></td></tr>
+  
+  <tr><td><table id="grupos">
+    <tr id="primeira">
+      <th colspan="3">Grupo C</th>
+    </tr>
+    <tr>
+      <td>1</td> 
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/ARG?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Argentina</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/KSA?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Árabia Saudita</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/MEX?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>México</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/POL?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Polônia</td>
+    </tr>
+  </table>
+  
+  <td><table id="grupos">
+    <tr id="primeira">
+      <th colspan="3">Grupo D</th>
+    </tr>
+    <tr>
+      <td>1</td> 
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/FRA?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>França</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/DEN?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Dinamarca</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/TUN?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Tunísia</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/AUS?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Austrália</td>
+    </tr>
+  </table>
+  </td></tr>
+  
+  <tr><td><table id="grupos">
+    <tr id="primeira">
+      <th colspan="3">Grupo E</th>
+    </tr>
+    <tr>
+      <td>1</td> 
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/AUS?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Espanha</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/GER?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Alemanha</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/JPN?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Japão</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/CRC?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Costa Rica</td>
+    </tr>
+  </table></td>
+
+  <td><table id="grupos">
+    <tr id="primeira">
+      <th colspan="3">Grupo F</th>
+    </tr>
+    <tr>
+      <td>1</td> 
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/CRC?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Bélgica</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/CAN?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Canadá</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/MAR?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Marrocos</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/CRO?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Croácia</td>
+    </tr>
+  </table></td></tr>
+
+  <tr><td><table id="grupos">
+    <tr id="primeira">
+      <th colspan="3">Grupo G</th>
+    </tr>
+    <tr>
+      <td>1</td> 
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/BRA?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Brasil</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/SRB?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Sérvia</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/SUI?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Suiça</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/CMR?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Camarões</td>
+    </tr>
+  </table></td>
+
+  <td><table id="grupos">
+    <tr id="primeira">
+      <th colspan="3">Grupo H</th>
+    </tr>
+    <tr>
+      <td>1</td> 
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/POR?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Portugal</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/GHA?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Gana</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/URU?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Uruguai</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/KOR?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
+      <td>Coréia do Sul</td>
+    </tr>
+  </table></td></tr>
+  
+</div>
+  <br><br><br>
   </body>
+</html>
