--- a/grupos.html
+++ b/grupos.html
@@ -65,6 +65,7 @@
   <section></section>
 
   <div id="info"><h1>Grupos</h1>
+    <p>Abaixo as tabelas referentes aos grupos que irão disputar a primeira fase da Copa do Mundo FIFA de 2022.</p>
     <table id="tudo"><tr><td>
     <table id="grupos">
     <tr id="primeira">
