hover diferente em brasil

--- a/grupos.html
+++ b/grupos.html
@@ -47,6 +47,11 @@
   padding: 8px;
 }
 
+.brbr:hover {
+  background-color: yellow;
+  background-clip: content-box;
+}
+
 #primeira {
     background-color: rgb(255, 255, 255);
 } 
@@ -230,8 +235,8 @@
     </tr>
     <tr>
       <td>1</td> 
-      <td><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/BRA?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></td>
-      <td>Brasil</td>
+      <td><a class="brbr" href="#"><img decoding="async" loading="lazy" height="auto" width="30%" src="https://cloudinary.fifa.com/api/v3/picture/flags-sq-2/BRA?tx=c_fill,g_auto,q_auto" alt="" title="" class="image_img__3ckHZ group_imageSize__11-Uy"></a></td>
+      <td><a class="brbr" href="#">Brasil</a></td>
     </tr>
     <tr>
       <td>2</td>
