adicionando as seleções

--- a/estadios.html
+++ b/estadios.html
@@ -16,8 +16,18 @@
             <li><a href="selecoes.html" style="color:rgb(240, 235, 214)">Seleções participantes</a>
                   <ul class="one">
                       <li><a href="selecoes.html#brasil">Brasil</a></li>
-                      <li><a href="link pra ir direto no país">País</a></li>
-                      <li><a href="link pra ir direto no país">País</a></li>
+                      <li><a href="selecoes.html#senegal">Senegal</a></li>
+                      <li><a href="selecoes.html#holanda">Holanda</a></li>
+                      <li><a href="selecoes.html#inglaterra">Inglaterra</a></li>
+                      <li><a href="selecoes.html#argentina">Argentina</a></li>
+                      <li><a href="selecoes.html#franca">França</a></li>
+                      <li><a href="selecoes.html#dinamarca">Dinamarca</a></li>
+                      <li><a href="selecoes.html#espanha">Espanha</a></li>
+                      <li><a href="selecoes.html#alemanha">Alemanha</a></li>
+                      <li><a href="selecoes.html#croacia">Croácia</a></li>
+                      <li><a href="selecoes.html#portugal">Portugal</a></li>
+                      <li><a href="selecoes.html#uruguai">Uruguai</a></li>
+
                   </ul>
               </li>
             <li><a href="grupos.html" style="color:rgb(240, 235, 214)">Grupos da Competição</a></li>
