--- a/selecoes.html
+++ b/selecoes.html
@@ -16,8 +16,18 @@
             <li><a href="selecoes.html" style="color:rgb(240, 235, 214)">Seleções participantes</a>
                   <ul class="one">
                       <li><a href="selecoes.html#brasil">Brasil</a></li>
-                      <li><a href="link pra ir direto no país">País</a></li>
-                      <li><a href="link pra ir direto no país">País</a></li>
+                      <li><a href="selecoes.html#senegal">Senegal</a></li>
+                      <li><a href="selecoes.html#holanda">Holanda</a></li>
+                      <li><a href="selecoes.html#inglaterra">Inglaterra</a></li>
+                      <li><a href="selecoes.html#argentina">Argentina</a></li>
+                      <li><a href="selecoes.html#franca">França</a></li>
+                      <li><a href="selecoes.html#dinamarca">Dinamarca</a></li>
+                      <li><a href="selecoes.html#espanha">Espanha</a></li>
+                      <li><a href="selecoes.html#alemanha">Alemanha</a></li>
+                      <li><a href="selecoes.html#croacia">Croácia</a></li>
+                      <li><a href="selecoes.html#portugal">Portugal</a></li>
+                      <li><a href="selecoes.html#uruguai">Uruguai</a></li>
+
                   </ul>
               </li>
             <li><a href="grupos.html" style="color:rgb(240, 235, 214)">Grupos da Competição</a></li>
@@ -51,10 +61,67 @@
 
   <div id="info"><h1>Seleções Participantes</h1>
     <h2 id="brasil">Brasil</h2>
-    <img src="img/bandeiras/brasil.jfif" alt="bandeira do Brasil" height="175" width="250" > <img src="img/bandeiras/njr10.jpg" alt="Neymar Jr" height="175">
-    <p>Descrição do país e da seleção. Citar o grupo em que está o país, para ter o link de redirecionar.</p>
-    <p>Citação dos principais jogadores e porque deles serem os principais.</p>
-    
-  </div>
+    <img src="img/bandeiras/brasil.jpg" alt="bandeira do Brasil" height="170"> <img src="img/bandeiras/njr10.jpg" alt="Neymar Jr" height="170">
+    <p>Formada em 1915, a seleção brasileira é a recordista de títulos da Copa do Mundo com 5 conquistas e a única seleção a participar de todas as edições, tendo sua época de ouro de 1958 a 1970 em que Pelé e companhia ganharam 3 das 4 Copas do Mundo disputadas na época, com destaque para a poderosa e revolucionária seleção de 70. 
+      Os outros títulos foram conquistados em 1994 (tetracampeonato) e 2002 (pentacampeonato), sendo o último com um time forte e recheado de craques, que contava com Ronaldo Fenômeno e Rivaldo, ambos vencedores do prêmio de Melhor do Mundo e que também foram os destaques daquela copa, alem destes, contava também com Ronaldinho Gaúcho e Kaká que anos mais tarde também foram vencedores do prêmio de Melhor do Mundo.</p>
+    <p>O Brasil tem como seu principal jogador o atacante Neymar, que estreou na seleção com 18 anos e desde sua primeira partida se tornou o craque da seleção, sendo campeão da Copa das Confederações e medalhista em 2 Olimpiadas. Neymar também carrega o título de segundo artilheiro da seleção, atrás apenas de Pelé. Em clubes,  Neymar foi multicampeão com destaque para a Libertadores da América pelo Santos e para a Champions League pelo Barcelona.</p>
+    <br>
+    <h2 id="senegal">Senegal</h2>
+    <img src="img/bandeiras/senegal.png" alt="bandeira do Senegal" height="170"> <img src="img/bandeiras/mendy1.jpg" alt="Mendy" height="170">
+    <p>A seleção de Senegal vem para a disputa de sua terceira Copa do Mundo após ter sido campeã da Copa Africana de Nações de 2021, tendo sido vice em 2 outras edições. Pela Copa do Mundo teve sua melhor campanha em 2002, em que chegou às quartas de finais com a sétima melhor campanha da edição.</p>
+      <p>Os principais jogadores de Senegal são o goleiro Édouard Mendy, campeão da Champions League pelo Chelsea, e o atacante Sadio Mané destaque pelo Liverpool e Bayern de Munique, e também artilheiro de sua seleção.</p>
+    <br>
+    <h2 id="holanda">Holanda</h2>
+    <img src="img/bandeiras/holanda.png" alt="bandeira da Holanda" height="170"> <img src="img/bandeiras/vandjik.jpg" alt="Van Djik" height="170">
+    <p>A seleção da Holanda é fortemente marcada pelo chamado "Carrossel holandês" comandado por Johan Cruyff na Copa do Mundo de 1974, quando revolucionou o futebol com o chamado Total Futebol. Esta chegou em 3 finais de Copa do mundo (1974, 1978 e 2010) e sempre contando com fortes seleções, porém, apesar de seu jogo encantador, até o momento nunca ganhou um título em sua história.</p>
+    <p>O principal jogador da Holanda é o zagueiro Virgil Van Dijk que atua pelo Liverpool, ele é considerado o melhor zagueiro da atualidade, além de ter sido o melhor jogador da Europa em 2019.</p>
+    <br>
+    <h2 id="inglaterra">Inglaterra</h2>
+    <img src="img/bandeiras/inglaterra.png" alt="bandeira da Inglaterra" height="170"> <img src="img/bandeiras/kane1.jpg" alt="Harry Kane" height="170">
+    <p>A seleção da Inglaterra é uma das duas mais antigas seleções de futebol do mundo e disputou a primeira partida oficial entre seleções em 1872; foi campeã da Copa do Mundo de 1966 disputando o torneio em casa e teve apenas outras 2 campanhas de destaque que foram as semifinais de 1990 e 2018. A seleção inglesa chega para a Copa do Qatar impulsionado pelo vice da Eurocopa de 2021.</p>
+      <p>O principal jogador da Inglaterra é o atacante Harry Kane que atua pelo Tottenham, é um dos melhores centroavantes da atualidade tendo marcado mais de 300 gols, um dos maiores artilheiros de sua seleção e foi artilheiro da copa de 2018 com 6 gols marcados.</p>  
+    <br>
+    <h2 id="argentina">Argentina</h2>
+    <img src="img/bandeiras/argentina.jpg" alt="bandeira da Argentina" height="170"> <img src="img/bandeiras/messi.jpg" alt="Leo Messi" height="170">
+    <p>A seleção da Argentina é uma das grandes seleções de futebol do mundo, tendo conquistado 2 Copas do Mundo em 1978 e 1986 e 15 títulos da Copa América. A Argentina possui 17 participações em Copas do Mundo, não tendo participado apenas de quatro Copas.</p>
+    <p>O principal jogador da Argentina é o atacante Lionel Messi que atua pelo Paris Saint Germain. Messi é considerado um dos melhores jogadores da história, tendo marcado mais de 700 gols, é o maior artilheiro de sua seleção e do Barcelona, foi 7 vezes o Melhor do Mundo e melhor jogador da Copa de 2014.</p>
+    <br>
+    <h2 id="franca">França</h2>
+    <img src="img/bandeiras/franca.png" alt="bandeira da França" height="170"> <img src="img/bandeiras/mbappe.jpg" alt="Kylian Mbappé" height="170">
+    <p>A seleção da França se tornou uma potência no futebol mundial a partir da década de 80, quando era comandada por Michel Platini, um dos melhores jogadores do mundo à época. Destacaram-se pelo vistoso futebol apresentado no título da Eurocopa de 1984 e dos Jogos Olímpicos de 1984 e venceu sua primeira Copa do Mundo em 1998 em um time com Zidane e Tierry Henry.</p>
+      <p>O principal jogador da França é o atacante Kylian Mbappé que atua pelo Paris Saint Germain, sendo um dos melhores jogadores jovens da atualidade tendo marcado mais de 300 gols. Ele é um dos maiores artilheiros de seu clube, ganhou o prêmio de Melhor Jogador Jovem da Copa de 2018 e também o Golden Boy.</p>    
+    <br>
+    <h2 id="dinamarca">Dinamarca</h2>
+    <img src="img/bandeiras/dinamarca.png" alt="bandeira da Dinamarca" height="170"> <img src="img/bandeiras/kasper.jpg" alt="Kasper Schmeichel" height="170">
+    <p>A seleção da Dinamarca se tornou uma potência no futebol mundial durante as décadas de 80 e 90, quando ganhou o apelido de Dinamáquina após uma boa Copa do Mundo em 1986, do título da Eurocopa de 1992 e da Copa das Confederações de 1995. Seu mais recente avanço são as semifinais da Eurocopa de 2021.</p>
+    <p>Os principais jogadores da Dinamarca são o goleiro Kasper Schmeichel atualmente no Nice, mas foi destaque no histórico Leicester City campeão da Premier League em 2016. Outro grande craque da Dinamarca é o meia Christian Eriksen que atua pelo Manchester United, no dia 12 de junho de 2021, durante uma partida da Eurocopa sofreu um mal súbito e precisou se afastar dos gramados durante 8 meses.</p>  
+    <br>
+    <h2 id="espanha">Espanha</h2>
+    <img src="img/bandeiras/espanha.png" alt="bandeira da Espanha" height="170"> <img src="img/bandeiras/sergio.jpg" alt="Sergio Ramos" height="170">
+    <p>A seleção da Espanha é uma das grandes potências do futebol mundial, conquistando as Olimpiadas de 1992, 3 Eurocopas (1964, 2008 e 2012), além da Copa do Mundo de 2010, em que a fúria encantou o mundo com o seu estilo de jogo conhecido como tiki taka com Xavi e Iniesta como suas peças fundamentais.</p>
+      <p>O principal jogador da Espanha é o zagueiro Sergio Ramos, atualmente no Paris Saint Germain, que é considerado como o melhor zagueiro de sua geração e um dos melhores zagueiros de todos os tempos. Ramos atuou durante 16 anos no Real Madrid, onde tem a incrível marca de 100 gols e foi extremamente importante na conquista de 4 Champions League.</p>
+    <br>
+    <h2 id="alemanha">Alemanha</h2>
+    <img src="img/bandeiras/alemanha.png" alt="bandeira da Alemanha" height="170"> <img src="img/bandeiras/neuer.jpg" alt="Neuer" height="170">
+    <p>A seleção da Alemanha é uma das grandes potências do futebol mundial, conquistando 3 Eurocopas (em 1972, 1980 e 1996) e 4 Copas do Mundo (1954, 1974, 1990 e 2014); é a seleção que mais vezes chegou as semifinais, tendo chegado em 13 ocasiões, além de ser a seleção com mais gol do torneio, tendo marcado 224.</p>
+    <p>O principal jogador da Alemanha é o goleiro Manuel Neuer, atualmente no Bayern de Munique, dado como um dos melhores goleiros da atualidade. Neuer reiventou a posição de goleiro, atuando um "goleiro-linha", e foi campeão da Copa do Mundo de 2014 e de 2 Champions League, sempre se destacando por suas magníficas defesas.</p> 
+    <br>
+    <h2 id="croacia">Croácia</h2>
+    <img src="img/bandeiras/croacia.png" alt="bandeira da Croácia" height="170"> <img src="img/bandeiras/modric.jpg" alt="Modric" height="170">
+    <p>A seleção da Croácia disputou apenas 5 Copas do Mundo todas desde 1998, mas com resultados expressivos como o terceiro lugar em 1998 e o segundo lugar em 2018. Trata-se de uma seleção recente pois surgiu apenas na década de 90 após o fim da Ioguslávia, e tem como principal marca o seu forte meio campo que ao passar dos anos sempre possuiu jogadores importantes.</p>
+    <p>O principal jogador da Croácia é o meia Luka Modrić, importante jogador do Real Madrid por conta de sua apurada técnica e intensidade em campo, foi eleito Melhor Jogador da Copa do Mundo de 2018, Melhor da Europa e Melhor do Mundo também em 2018. Modric é um dos maiores vencedores da Champions League com 5 títulos.</p>  
+    <br>
+    <h2 id="portugal">Portugal</h2>
+    <img src="img/bandeiras/portugal.jpg" alt="bandeira de Portugal" height="170"> <img src="img/bandeiras/cr7.jpg" alt="Cristiano Ronaldo" height="170">
+    <p>A seleção de Portugal figurou em alguns momentos como uma potência do futebol mundial, com um marcante time nos anos 60 tendo Eusébio como o grande craque do time terceiro colocado na Copas do Mundo de 1966, porém o seu auge foi nos anos 2000, sendo o quarto colocado na Copa do Mundo de 2006. Pela Eurocopa chegou as semifinais em 2000 e 2012, foi vice em 2004 e campeão em 2016 sendo seu primeiro título da história.</p>
+      <p>O principal jogador de Portugal é o atacante Cristiano Ronaldo, atualmente no Manchester United, foi eleito 5 vezes o Melhor Jogador do Mundo, ganhou 1 Eurocopa, 1 Natios League e 5 Champions League, é o maior artilheiro das seleções, Champions League e do Real Madrid e marcou mais de 800 gols em sua carreira .</p>  
+  <br>
+    <h2 id="uruguai">Uruguai</h2>
+    <img src="img/bandeiras/uruguai.png" alt="bandeira do Uruguai" height="170"> <img src="img/bandeiras/suarez.jpg" alt="Suarez" height="170">
+    <p>A seleção do Uruguai é uma tradicional seleção, sendo uma das primeiras seleções, junto à Argentina, a jogar uma partida internacional fora das Ilhas Britânicas, em 1902. Foi uma das maiores seleções até os anos 50, tendo a maioria das suas conquistas até a época, conquistou a Copa América 15 vezes, as Olimpíadas 2 vezes e também 2 Copas do Mundo. Seu melhor desempenho recente foi o quarto lugar em 2010.</p>
+      <p>O principal jogador do Uruguai é o atacante Luis Suárez, atualmente no Nacional do Uruguai, é considerado um dos melhores atacantes de sua geração, fez parte do histórico trio MSN ao lado de Neymar e Messi no Barcelano, e foi campeão da Copa América de 2011 e da Champions League de 2015. Tem como lance mais marcante o gol em que salvou embaixo da linha utilizando a mão contra Gana na Copa do Mundo de 2010, lance que evitou a eliminação uruguaia e permitiu que avançasse para as semifinais.</p>  
+
+    </div>
+
 </body>
 </html>
