--- a/selecoes.html
+++ b/selecoes.html
@@ -7,7 +7,7 @@
     <title>Copa do Mundo 2022 | Qatar</title>
     <link href="img/copaicon.ico" rel="icon">
     <link rel="stylesheet" href="css/copa.css">
-    <link rel="stylesheet" href="css/estadios.css"> 
+    <link rel="stylesheet" href="css/selecoes.css"> 
     <nav>
       
         <h1 style="color:rgb(240, 235, 214)">Descubra a Copa</h1>
